--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Work Day Scheduler</title>
+        <!-- Add the link to your custom favicon -->
     </head>
 
     <body>
@@ -32,6 +33,7 @@
             <!-- Timeblocks go here -->
         </div>
 
+        <!-- Here goes the link to the jQuery UI -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     </body>
