created pseudocode to get an idea of what the app will be like

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- Here goes the jQuery link -->
+        <!-- Here goes the jqueryUI link -->
         <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        />
+        <link 
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css"
         />
         <link
             rel="stylesheet"
@@ -18,9 +24,12 @@
             href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link 
+            rel="stylesheet"
+            href="./assets/css/style.css"
+        />
         <title>Work Day Scheduler</title>
-        <!-- Add the link to your custom favicon -->
+        <link rel="shortcut icon" href="./assets/images/canocan_3000.png" type="image/png">
     </head>
 
     <body>
@@ -33,8 +42,10 @@
             <!-- Timeblocks go here -->
         </div>
 
-        <!-- Here goes the link to the jQuery UI -->
+        <!-- Here goes the script to the jQuery UI -->
+        <script src="./assets/js/homepage.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     </body>
 </html>
