created dynamic time-blocks

--- a/index.html
+++ b/index.html
@@ -40,11 +40,19 @@
         </header>
         <div class="container">
             <!-- Timeblocks go here -->
+            <!-- <form class="row">
+                <h2 class="col-2 overflow-auto hour time-block">9:00AM</h2>
+                <textarea class="col-9 description"></textarea>
+                <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+            </form> -->
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
         <script src="./assets/js/homepage.js"></script>
     </body>
 </html>
